Closed
Bug 1644810
Opened 5 years ago
Closed 5 years ago
Tree views don't talk well with VoiceOver
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
VERIFIED
FIXED
84 Branch
People
(Reporter: MarcoZ, Assigned: morgan)
References
(Blocks 2 open bugs)
Details
(Whiteboard: [mac2020_2])
Attachments
(1 file)
Steps, with VoiceOver on:
- Visit this example tree view.
- Tab to the actual tree view.
- Firefox: Claims the table is empty, and seems unsure where the focus is.
- Safari: Recognizes the table, and speaks where the focus is.
- Start arrowing through the tree with up and down arrows.
- Firefox: Speaks "List box", followed by the item.
- Safari: Speaks "Listbox" and the item, but also the level, and if it is collapsed.
- On an expandable item, press RightArrow to expand:
- Firefox: Just repeats the item, does notgive an indication that the tree item has expanded.
- Safari: Indicates that the item has expanded.
- DownArrow into the newly expanded items.
- Firefox: Only says "listbox" and the item.
- Safari: Gives an indication of the level change.
Note that Safari and VoiceOver are a bit inconsistent about announcing the level changes when items are already expanded, and one traverses from a level 1 node to a level 2 one, or vice versa. But Firefox and VoiceOver don't give an indication at all.
The tree view inconsistencies are also reproducible using the HTML Inspector developer tool.
Updated•5 years ago
|
Priority: P2 → P1
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → mreschenberg
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/09099fc8d4f2
Implement accessible subclasses for AXOutline and AXOutlineItem r=eeejay
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox84:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
Updated•5 years ago
|
Flags: qe-verify+
Comment 4•5 years ago
|
||
This issue is Verified as fixed in our latest Nightly, as well as our Latest RC candidate 84.0 on Mac OS 10.15
You need to log in
before you can comment on or make changes to this bug.
Description
•