Bug 1644810: Implement accessible subclasses for AXOutline and AXOutlineItem r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D96074