accessible/mac/AccessibleWrap.mm
@@ -328,6 +328,13 @@ Class a11y::GetTypeFromRole(roles::Role aRole) {
     case roles::SUMMARY:
       return [MOXSummaryAccessible class];
 
+    case roles::OUTLINE:
+    case roles::TREE_TABLE:
+      return [mozOutlineAccessible class];
+
+    case roles::OUTLINEITEM:
+      return [mozOutlineRowAccessible class];
+
     default:
       return [mozAccessible class];
   }
